--- a/index.html
+++ b/index.html
@@ -2,92 +2,189 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Shader mit OrbitControls und Licht</title>
+  <title>Shader Fraktal Visualisierung</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      height: 100%;
-      background-color: black;
+      background: black;
     }
     canvas {
+      width: 100vw;
+      height: 100vh;
       display: block;
     }
   </style>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.161.0/examples/js/controls/OrbitControls.min.js"></script>
-<script id="fragmentShader" type="x-shader/x-fragment">
-  precision highp float;
-  uniform float time;
-  uniform vec2 resolution;
+<canvas id="glcanvas"></canvas>
 
-  void main() {
-    vec2 uv = gl_FragCoord.xy / resolution.xy;
-    vec3 col = 0.5 + 0.5 * cos(time + uv.xyx + vec3(0, 2, 4));
-    gl_FragColor = vec4(col, 1.0);
-  }
+<!-- Vertex Shader -->
+<script type="x-shader/x-vertex">
+attribute vec3 position;
+void main() {
+  gl_Position = vec4(position, 1.0);
+}
 </script>
 
-<script id="vertexShader" type="x-shader/x-vertex">
-  varying vec2 vUv;
-  void main() {
-    vUv = uv;
-    gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+<!-- Fragment Shader -->
+<script type="x-shader/x-fragment">
+precision highp float;
+uniform vec2 resolution;
+uniform float time;
+
+mat3 rotationY(float angle) {
+  float s = sin(angle), c = cos(angle);
+  return mat3(
+    c, 0.0, -s,
+    0.0, 1.0, 0.0,
+    s, 0.0, c
+  );
+}
+
+mat3 rotationZ(float angle) {
+  float s = sin(angle), c = cos(angle);
+  return mat3(
+    c, s, 0.0,
+   -s, c, 0.0,
+    0.0, 0.0, 1.0
+  );
+}
+
+float fBox(vec3 p, vec3 b) {
+  vec3 d = abs(p) - b;
+  return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
+}
+
+float scene(vec3 p) {
+  float s = 0.3;
+  vec3 pos = p;
+  float value = 1.0;
+
+  for (int i = 0; i < 6; i++) {
+    vec2 absXY = abs(pos.xy) - value;
+    pos = vec3(absXY, pos.z);
+    pos = rotationY(time * 0.2) * pos;
+    pos = rotationZ(time * 0.15) * pos;
+    value *= 0.9;
   }
+
+  float box1 = fBox(pos, vec3(0.3));
+  float box2 = fBox(pos, vec3(0.1));
+  float d = -box1;
+  d = min(d, box2);
+
+  float sphere = length(pos) - 0.4;
+  return max(d, sphere);
+}
+
+vec3 getNormal(vec3 p) {
+  float e = 0.001;
+  vec2 h = vec2(e, 0.0);
+  return normalize(vec3(
+    scene(p + h.xyy) - scene(p - h.xyy),
+    scene(p + h.yxy) - scene(p - h.yxy),
+    scene(p + h.yyx) - scene(p - h.yyx)
+  ));
+}
+
+void main() {
+  vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
+  uv.x *= resolution.x / resolution.y;
+
+  vec3 ro = vec3(sin(time * 0.3) * 3.0, sin(time * 0.15) * 2.0, cos(time * 0.3) * 3.0);
+  vec3 ta = vec3(0.0);
+  vec3 f = normalize(ta - ro);
+  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
+  vec3 u = cross(f, r);
+  vec3 rd = normalize(uv.x * r + uv.y * u + f);
+
+  float t = 0.0;
+  float d;
+  bool hit = false;
+  for(int i = 0; i < 100; i++) {
+    vec3 p = ro + rd * t;
+    d = scene(p);
+    if (d < 0.001) {
+      hit = true;
+      break;
+    }
+    if (t > 20.0) break;
+    t += d;
+  }
+
+  vec3 col = vec3(0.0);
+  if (hit) {
+    vec3 p = ro + rd * t;
+    vec3 n = getNormal(p);
+    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
+    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+    col = pow(col, vec3(0.4545));
+  }
+
+  gl_FragColor = vec4(col, 1.0);
+}
 </script>
 
+<!-- WebGL Init + Render -->
 <script>
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 100);
-  camera.position.z = 2;
+const canvas = document.getElementById('glcanvas');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+const gl = canvas.getContext('webgl');
 
-  const renderer = new THREE.WebGLRenderer();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
-
-  const controls = new THREE.OrbitControls(camera, renderer.domElement);
-
-  const uniforms = {
-    time: { value: 0.0 },
-    resolution: { value: new THREE.Vector2(window.innerWidth, window.innerHeight) }
-  };
-
-  const material = new THREE.ShaderMaterial({
-    uniforms: uniforms,
-    vertexShader: document.getElementById('vertexShader').textContent,
-    fragmentShader: document.getElementById('fragmentShader').textContent
-  });
-
-  const geometry = new THREE.PlaneGeometry(2, 2);
-  const mesh = new THREE.Mesh(geometry, material);
-  scene.add(mesh);
-
-  // Licht
-  const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
-  directionalLight.position.set(0, 1, 1);
-  scene.add(directionalLight);
-
-  const ambientLight = new THREE.AmbientLight(0x404040);
-  scene.add(ambientLight);
-
-  function animate(time) {
-    uniforms.time.value = time * 0.001;
-    renderer.render(scene, camera);
-    controls.update();
-    requestAnimationFrame(animate);
+function compileShader(type, source) {
+  const shader = gl.createShader(type);
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    console.error(gl.getShaderInfoLog(shader));
+    return null;
   }
-  animate();
+  return shader;
+}
 
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    uniforms.resolution.value.set(window.innerWidth, window.innerHeight);
-  });
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
+
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
+
+const program = gl.createProgram();
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
+gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
+gl.useProgram(program);
+
+const posLoc = gl.getAttribLocation(program, 'position');
+const resLoc = gl.getUniformLocation(program, 'resolution');
+const timeLoc = gl.getUniformLocation(program, 'time');
+
+const buffer = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
+  -1,-1,0, 1,-1,0, -1,1,0,
+  -1,1,0, 1,-1,0, 1,1,0
+]), gl.STATIC_DRAW);
+gl.enableVertexAttribArray(posLoc);
+gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
+
+function render(t) {
+  gl.viewport(0, 0, canvas.width, canvas.height);
+  gl.clear(gl.COLOR_BUFFER_BIT);
+  gl.uniform2f(resLoc, canvas.width, canvas.height);
+  gl.uniform1f(timeLoc, t * 0.001);
+  gl.drawArrays(gl.TRIANGLES, 0, 6);
+  requestAnimationFrame(render);
+}
+requestAnimationFrame(render);
 </script>
 </body>
 </html>
