--- a/index.html
+++ b/index.html
@@ -35,102 +35,100 @@ precision highp float;
 uniform vec2 resolution;
 uniform float time;
 
-mat3 rotationY(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, 0.0, -s,
-    0.0, 1.0, 0.0,
-    s, 0.0, c
-  );
+mat3 rY(float a) {
+    float s = sin(a), c = cos(a);
+    return mat3(
+        c, 0.0, -s,
+        0.0, 1.0, 0.0,
+        s, 0.0, c
+    );
 }
 
-mat3 rotationZ(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, s, 0.0,
-   -s, c, 0.0,
-    0.0, 0.0, 1.0
-  );
+mat3 rZ(float a) {
+    float s = sin(a), c = cos(a);
+    return mat3(
+        c, s, 0.0,
+        -s, c, 0.0,
+        0.0, 0.0, 1.0
+    );
 }
 
 float fBox(vec3 p, vec3 b) {
-  vec3 d = abs(p) - b;
-  return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
+    vec3 d = abs(p) - b;
+    return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
 }
 
 float scene(vec3 p) {
-  float s = 0.3;
-  vec3 pos = p;
-  float value = 1.0;
+    vec3 pos = p;
+    float size = 1.0;
+    float scale = 0.5;
 
-  for (int i = 0; i < 6; i++) {
-    vec2 absXY = abs(pos.xy) - value;
-    pos = vec3(absXY, pos.z);
-    pos = rotationY(time * 0.2) * pos;
-    pos = rotationZ(time * 0.15) * pos;
-    value *= 0.9;
-  }
+    for (int i = 0; i < 5; i++) {
+        pos.xy = abs(pos.xy) - size;
+        pos = rY(time * 0.2) * pos;
+        pos = rZ(time * 0.15) * pos;
+        size *= 0.8;
+    }
 
-  float box1 = fBox(pos, vec3(0.3));
-  float box2 = fBox(pos, vec3(0.1));
-  float d = -box1;
-  d = min(d, box2);
+    float d1 = fBox(pos, vec3(0.3));
+    float d2 = fBox(pos, vec3(0.1));
+    float d = min(-d1, d2);
 
-  float sphere = length(pos) - 0.4;
-  return max(d, sphere);
+    float s = length(pos) - 0.4;
+    return max(d, s);
 }
 
 vec3 getNormal(vec3 p) {
-  float e = 0.001;
-  vec2 h = vec2(e, 0.0);
-  return normalize(vec3(
-    scene(p + h.xyy) - scene(p - h.xyy),
-    scene(p + h.yxy) - scene(p - h.yxy),
-    scene(p + h.yyx) - scene(p - h.yyx)
-  ));
+    float e = 0.001;
+    vec2 h = vec2(e, 0.0);
+    return normalize(vec3(
+        scene(p + h.xyy) - scene(p - h.xyy),
+        scene(p + h.yxy) - scene(p - h.yxy),
+        scene(p + h.yyx) - scene(p - h.yyx)
+    ));
 }
 
 void main() {
-  vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
-  uv.x *= resolution.x / resolution.y;
+    vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
+    uv.x *= resolution.x / resolution.y;
 
-  vec3 ro = vec3(sin(time * 0.3) * 3.0, sin(time * 0.15) * 2.0, cos(time * 0.3) * 3.0);
-  vec3 ta = vec3(0.0);
-  vec3 f = normalize(ta - ro);
-  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
-  vec3 u = cross(f, r);
-  vec3 rd = normalize(uv.x * r + uv.y * u + f);
+    vec3 ro = vec3(sin(time * 0.3) * 3.0, sin(time * 0.15) * 2.0, cos(time * 0.3) * 3.0);
+    vec3 ta = vec3(0.0);
+    vec3 f = normalize(ta - ro);
+    vec3 r = normalize(cross(vec3(0.0, 1.0, 0.0), f));
+    vec3 u = cross(f, r);
+    vec3 rd = normalize(uv.x * r + uv.y * u + f);
 
-  float t = 0.0;
-  float d;
-  bool hit = false;
-  for(int i = 0; i < 100; i++) {
-    vec3 p = ro + rd * t;
-    d = scene(p);
-    if (d < 0.001) {
-      hit = true;
-      break;
+    float t = 0.0;
+    bool hit = false;
+    float d;
+
+    for (int i = 0; i < 100; i++) {
+        vec3 p = ro + rd * t;
+        d = scene(p);
+        if (d < 0.001) {
+            hit = true;
+            break;
+        }
+        if (t > 20.0) break;
+        t += d;
     }
-    if (t > 20.0) break;
-    t += d;
-  }
 
-  vec3 col = vec3(0.0);
-  if (hit) {
-    vec3 p = ro + rd * t;
-    vec3 n = getNormal(p);
-    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
-    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
-    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
-    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
-    col = pow(col, vec3(0.4545));
-  }
+    vec3 col = vec3(0.0);
+    if (hit) {
+        vec3 p = ro + rd * t;
+        vec3 n = getNormal(p);
+        vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
+        float diff = clamp(dot(n, lightDir), 0.0, 1.0);
+        float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+        col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+        col = pow(col, vec3(0.4545)); // Gamma correction
+    }
 
-  gl_FragColor = vec4(col, 1.0);
+    gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
-<!-- WebGL Init + Render -->
 <script>
 const canvas = document.getElementById('glcanvas');
 canvas.width = window.innerWidth;
@@ -138,14 +136,14 @@ canvas.height = window.innerHeight;
 const gl = canvas.getContext('webgl');
 
 function compileShader(type, source) {
-  const shader = gl.createShader(type);
-  gl.shaderSource(shader, source);
-  gl.compileShader(shader);
-  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-    console.error(gl.getShaderInfoLog(shader));
-    return null;
-  }
-  return shader;
+    const shader = gl.createShader(type);
+    gl.shaderSource(shader, source);
+    gl.compileShader(shader);
+    if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+        console.error(gl.getShaderInfoLog(shader));
+        return null;
+    }
+    return shader;
 }
 
 const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
@@ -159,7 +157,7 @@ gl.attachShader(program, vertexShader);
 gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
 if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-  console.error(gl.getProgramInfoLog(program));
+    console.error(gl.getProgramInfoLog(program));
 }
 gl.useProgram(program);
 
@@ -170,19 +168,19 @@ const timeLoc = gl.getUniformLocation(program, 'time');
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-  -1,-1,0, 1,-1,0, -1,1,0,
-  -1,1,0, 1,-1,0, 1,1,0
+    -1,-1,0, 1,-1,0, -1,1,0,
+    -1,1,0, 1,-1,0, 1,1,0
 ]), gl.STATIC_DRAW);
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
 function render(t) {
-  gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.clear(gl.COLOR_BUFFER_BIT);
-  gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, t * 0.001);
-  gl.drawArrays(gl.TRIANGLES, 0, 6);
-  requestAnimationFrame(render);
+    gl.viewport(0, 0, canvas.width, canvas.height);
+    gl.clear(gl.COLOR_BUFFER_BIT);
+    gl.uniform2f(resLoc, canvas.width, canvas.height);
+    gl.uniform1f(timeLoc, t * 0.001);
+    gl.drawArrays(gl.TRIANGLES, 0, 6);
+    requestAnimationFrame(render);
 }
 requestAnimationFrame(render);
 </script>
