--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Shader mit Orbit Controls & starken langsamen Animationen</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Shader mit langsamer extremer Animation und Orbit Controls</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
-      margin: 0; padding: 0; overflow: hidden; background: black;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
       height: 100%;
-      user-select: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
+      background: black;
+      touch-action: none;
     }
     canvas {
+      display: block;
       width: 100vw;
       height: 100vh;
-      display: block;
       cursor: grab;
-      touch-action: none;
     }
     canvas:active {
       cursor: grabbing;
@@ -28,38 +27,27 @@
 <body>
 <canvas id="glcanvas"></canvas>
 
-<!-- Vertex Shader -->
-<script type="x-shader/x-vertex">
+<script id="vs" type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
 </script>
 
-<!-- Fragment Shader -->
-<script type="x-shader/x-fragment">
+<script id="fs" type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
 uniform vec3 camPos;
 uniform vec3 camTarget;
 
-mat3 rotationY(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, 0.0, -s,
-    0.0, 1.0, 0.0,
-    s, 0.0, c
-  );
+mat3 rotationY(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c, 0.0, -s, 0.0, 1.0, 0.0, s, 0.0, c);
 }
-
-mat3 rotationZ(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, s, 0.0,
-   -s, c, 0.0,
-    0.0, 0.0, 1.0
-  );
+mat3 rotationZ(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c, s, 0.0, -s, c, 0.0, 0.0, 0.0, 1.0);
 }
 
 float fBox(vec3 p, vec3 b) {
@@ -67,43 +55,46 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
 }
 
-float scene(vec3 p, float time) {
-  float baseSize = 0.2 + 0.3 * sin(time * 0.1);
-  float smallBoxSize = 0.05 + 0.25 * cos(time * 0.07);
-  float sphereRadius = 0.2 + 0.35 * sin(time * 0.05 + 1.0);
-  float translation = 0.6 * sin(time * 0.03);
+float scene(vec3 p) {
+  float t1 = time * 0.1;
+  float t2 = time * 0.03;
+  float t3 = time * 0.05;
+  float t4 = time * 0.07;
 
   vec3 pos = p;
-  float valueAnim = 1.0;
+  float size = 0.4 + 0.3 * sin(t1 * 0.7);
+  float sphereRadius = 0.4 + 0.2 * sin(t2 * 0.9);
+  vec3 translation = vec3(
+    sin(t2 * 0.3) * 1.5,
+    cos(t3 * 0.2) * 1.0,
+    sin(t4 * 0.1) * 0.5
+  );
 
-  pos.z += translation;
+  pos -= translation;
 
-  for (int i = 0; i < 6; i++) {
-    vec2 absXY = abs(pos.xy) - valueAnim;
-    pos = vec3(absXY, pos.z);
-    float ry = time * (0.1 + 0.04 * float(i));
-    float rz = time * (0.07 + 0.03 * float(i));
-    pos = rotationY(ry) * pos;
-    pos = rotationZ(rz) * pos;
-    valueAnim *= 0.9;
+  for (int i = 0; i < 5; i++) {
+    pos = rotationY(t1 * 0.2) * pos;
+    pos = rotationZ(t1 * 0.15) * pos;
+    float scale = 0.8 + 0.1 * sin(t2 + float(i));
+    pos *= scale;
   }
 
-  float box1 = fBox(pos, vec3(baseSize));
-  float box2 = fBox(pos, vec3(smallBoxSize));
-  float d = -box1;
-  d = min(d, box2);
-
+  float box = fBox(pos, vec3(size));
+  float innerBox = fBox(pos, vec3(size * 0.5));
   float sphere = length(pos) - sphereRadius;
+
+  float d = -box;
+  d = min(d, innerBox);
   return max(d, sphere);
 }
 
-vec3 getNormal(vec3 p, float time) {
+vec3 getNormal(vec3 p) {
   float e = 0.001;
   vec2 h = vec2(e, 0.0);
   return normalize(vec3(
-    scene(p + h.xyy, time) - scene(p - h.xyy, time),
-    scene(p + h.yxy, time) - scene(p - h.yxy, time),
-    scene(p + h.yyx, time) - scene(p - h.yyx, time)
+    scene(p + h.xyy) - scene(p - h.xyy),
+    scene(p + h.yxy) - scene(p - h.yxy),
+    scene(p + h.yyx) - scene(p - h.yyx)
   ));
 }
 
@@ -121,25 +112,23 @@ void main() {
   float t = 0.0;
   float d;
   bool hit = false;
+
   for(int i = 0; i < 100; i++) {
     vec3 p = ro + rd * t;
-    d = scene(p, time);
-    if (d < 0.001) {
-      hit = true;
-      break;
-    }
-    if (t > 20.0) break;
+    d = scene(p);
+    if (d < 0.001) { hit = true; break; }
+    if (t > 50.0) break;
     t += d;
   }
 
   vec3 col = vec3(0.0);
   if (hit) {
     vec3 p = ro + rd * t;
-    vec3 n = getNormal(p, time);
-    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
+    vec3 n = getNormal(p);
+    vec3 lightDir = normalize(vec3(1.0, 1.5, 1.2));
     float diff = clamp(dot(n, lightDir), 0.0, 1.0);
-    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
-    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 32.0);
+    col = vec3(0.5, 0.7, 1.0) * diff + vec3(1.0) * spec * 0.5;
     col = pow(col, vec3(0.4545));
   }
 
@@ -171,8 +160,8 @@ function compileShader(type, source) {
   return shader;
 }
 
-const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
-const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
+const vsSource = document.getElementById("vs").textContent;
+const fsSource = document.getElementById("fs").textContent;
 
 const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
 const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
@@ -201,65 +190,62 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Controls mit Maus & Touch
-let theta = Math.PI/4;
-let phi = Math.PI/4;
-let radius = 4.0;
-let target = [0,0,0];
-
+// Orbit Controls
+let theta = Math.PI / 4;
+let phi = Math.PI / 3;
+let radius = 5.0;
+let target = [0, 0, 0];
+let lastX = 0, lastY = 0;
 let isDragging = false;
 let isPanning = false;
-let lastX = 0, lastY = 0;
+let touchStartDist = 0;
 
-canvas.addEventListener('mousedown', (e) => {
+canvas.addEventListener('mousedown', e => {
   isDragging = true;
+  isPanning = e.button === 2 || e.shiftKey;
   lastX = e.clientX;
   lastY = e.clientY;
-  isPanning = e.button === 2 || e.shiftKey;
-  e.preventDefault();
 });
-canvas.addEventListener('mouseup', () => { isDragging = isPanning = false; });
-canvas.addEventListener('mouseleave', () => { isDragging = isPanning = false; });
-
-canvas.addEventListener('mousemove', (e) => {
+canvas.addEventListener('mouseup', () => isDragging = false);
+canvas.addEventListener('mouseleave', () => isDragging = false);
+canvas.addEventListener('mousemove', e => {
   if (!isDragging) return;
   let dx = e.clientX - lastX;
   let dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
+
   if (isPanning) {
-    const panSpeed = 0.005 * radius;
-    let camPos = getCamPos();
-    let forward = normalize(subtractVectors(target, camPos));
-    let right = normalize(cross(forward, [0,1,0]));
-    let up = normalize(cross(right, forward));
-    target = addVectors(target,
-      addVectors(
-        scaleVector(right, -dx * panSpeed),
-        scaleVector(up, dy * panSpeed)
-      )
-    );
+    const panSpeed = 0.002 * radius;
+    let cam = getCamPos();
+    let fwd = normalize(subtract(target, cam));
+    let right = normalize(cross(fwd, [0, 1, 0]));
+    let up = cross(right, fwd);
+    target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
   } else {
     theta -= dx * 0.005;
     phi -= dy * 0.005;
     phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
   }
 });
-
-canvas.addEventListener('wheel', (e) => {
+canvas.addEventListener('wheel', e => {
   e.preventDefault();
-  radius += e.deltaY * 0.0015;
-  radius = Math.max(0.5, Math.min(20, radius));
+  radius *= 1 + e.deltaY * 0.001;
+  radius = Math.max(1, Math.min(30, radius));
 });
+canvas.addEventListener('contextmenu', e => e.preventDefault());
 
-canvas.addEventListener('touchstart', (e) => {
+// Touch support
+canvas.addEventListener('touchstart', e => {
   if (e.touches.length === 1) {
     isDragging = true;
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
+  } else if (e.touches.length === 2) {
+    touchStartDist = getTouchDist(e);
   }
 });
-canvas.addEventListener('touchmove', (e) => {
+canvas.addEventListener('touchmove', e => {
   if (e.touches.length === 1 && isDragging) {
     let dx = e.touches[0].clientX - lastX;
     let dy = e.touches[0].clientY - lastY;
@@ -268,53 +254,44 @@ canvas.addEventListener('touchmove', (e) => {
     theta -= dx * 0.005;
     phi -= dy * 0.005;
     phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  } else if (e.touches.length === 2) {
+    let newDist = getTouchDist(e);
+    let delta = newDist - touchStartDist;
+    radius *= 1 - delta * 0.005;
+    radius = Math.max(1, Math.min(30, radius));
+    touchStartDist = newDist;
   }
 });
-canvas.addEventListener('touchend', () => { isDragging = false; });
+canvas.addEventListener('touchend', () => isDragging = false);
+function getTouchDist(e) {
+  let dx = e.touches[0].clientX - e.touches[1].clientX;
+  let dy = e.touches[0].clientY - e.touches[1].clientY;
+  return Math.sqrt(dx * dx + dy * dy);
+}
 
-canvas.addEventListener('contextmenu', e => e.preventDefault());
+// Vektor-Utilities
+function subtract(a,b){ return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
+function add(a,b){ return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
+function scale(v,s){ return [v[0]*s, v[1]*s, v[2]*s]; }
+function normalize(v){ let l = Math.hypot(...v); return l > 0.0001 ? scale(v, 1/l) : [0,0,0]; }
+function cross(a,b){ return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]]; }
 
-function subtractVectors(a,b) {
-  return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
-}
-function addVectors(a,b) {
-  return [a[0]+b[0], a[1]+b[1], a[2]+b[2]];
-}
-function scaleVector(v,s) {
-  return [v[0]*s, v[1]*s, v[2]*s];
-}
-function lengthVector(v) {
-  return Math.sqrt(v[0]*v[0]+v[1]*v[1]+v[2]*v[2]);
-}
-function normalize(v) {
-  let len = lengthVector(v);
-  return len > 0.00001 ? scaleVector(v, 1/len) : [0,0,0];
-}
-function cross(a,b) {
-  return [
-    a[1]*b[2] - a[2]*b[1],
-    a[2]*b[0] - a[0]*b[2],
-    a[0]*b[1] - a[1]*b[0]
-  ];
-}
 function getCamPos() {
-  let sinPhi = Math.sin(phi);
-  return addVectors(target, [
-    radius * sinPhi * Math.sin(theta),
+  return add(target, [
+    radius * Math.sin(phi) * Math.sin(theta),
     radius * Math.cos(phi),
-    radius * sinPhi * Math.cos(theta)
+    radius * Math.sin(phi) * Math.cos(theta)
   ]);
 }
 
 function render(t) {
   gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
-  let camPos = getCamPos();
+  gl.clear(gl.COLOR_BUFFER_BIT);
   gl.useProgram(program);
+
   gl.uniform2f(resLoc, canvas.width, canvas.height);
   gl.uniform1f(timeLoc, t * 0.001);
-  gl.uniform3fv(camPosLoc, camPos);
+  gl.uniform3fv(camPosLoc, getCamPos());
   gl.uniform3fv(camTargetLoc, target);
 
   gl.drawArrays(gl.TRIANGLES, 0, 6);
